# mathesar-cli

./: README.md  SKILL.md  pyproject.toml
docs/: METHODS.md
skills/mathesar-cli/: SKILL.md
skills/mathesar-cli/agents/: openai.yaml
src/mathesar_cli/: __init__.py  cli.py  client.py  config.py  mcp_server.py  operations.py
tests/: test_cli.py
